--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+    font-size: 14px;
+
+    * {
+        font-size: inherit;
+    }
+}
+
+body {
+    box-sizing: border-box;
+
+    * {
+        box-sizing: inherit;
+    }
+}
