[Hours definitions] Adjusted

--- a/src/app/components/week-schedule/week-schedule.component.html
+++ b/src/app/components/week-schedule/week-schedule.component.html
@@ -2,7 +2,7 @@
   <aside class="hour-segments">
     <div *ngFor="let segment of hourSegments"
       class="hour cell">
-      {{ segment }}
+      {{ segment }}:00
     </div>
   </aside>
   <div class="body">
@@ -13,7 +13,7 @@
       </div>
       <div *ngFor="let segment of hourSegments"
         class="weekday-hour cell">
-        {{ segment }}
+        <!-- {{ segment }} -->
       </div>
     </div>
   </div>
