--- a/src/app/components/week-schedule/week-schedule.component.scss
+++ b/src/app/components/week-schedule/week-schedule.component.scss
@@ -2,6 +2,7 @@ $border-color: rgba(#ccc, 0.8);
 $week-header-height: 60px;
 $hour-segments-width: 60px;
 $cell-height: 60px;
+$whitish: rgba(#eee, 0.6);
 
 :host {
     display: block;
@@ -37,6 +38,14 @@ $cell-height: 60px;
 
         .weekday {
             height: $week-header-height;
+        }
+
+        .weekday-hour {
+            transition: background-color 300ms ease-out;
+
+            &:hover {
+                background-color: $whitish;
+            }
         }
     }
 
