--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,19 @@ body {
     }
 }
 
+input[type=text],
+input[type=email] {
+    outline: none;
+    border: none;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
 app-week-schedule .calendar .mat-chip {
     padding: 3px 9px;
 }
