--- a/src/app/components/record-dialog/record-dialog.component.html
+++ b/src/app/components/record-dialog/record-dialog.component.html
@@ -1,8 +1,8 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
-  <ul formArrayName="recForms">
+  <ul formArrayName="recForms" [hidden]="disabled.value">
       <li *ngFor="let rec of recForms.controls; let i=index" [formGroupName]="i"
         class="record-form-item">
-          <input type="text" formControlName="truckNumber" />
+          <input type="text" [disabled]="disabled.value" formControlName="truckNumber" />
 
           <button (click)="removeTruck(i)"
             type="button" mat-raised-button
@@ -17,14 +17,20 @@
       </li>
     </ul>
   <button *ngIf="showAddTruckBtn" (click)="addTruck($event.target.value)"
+    [disabled]="disabled.value"
     type="button" mat-raised-button
     color="primary">
     <img src="/assets/ic_library_add_white_24px.svg" />
     Add truck
   </button>
 
+  <div>
+    <mat-checkbox formControlName="disabled">Disable</mat-checkbox>
+  </div>
+
   <footer>
-      <button type="button" mat-button>
+      <button (click)="close()"
+        type="button" mat-button>
           Cancel
       </button>
       
