--- a/src/app/components/week-schedule/week-schedule.component.scss
+++ b/src/app/components/week-schedule/week-schedule.component.scss
@@ -3,6 +3,7 @@ $week-header-height: 60px;
 $hour-segments-width: 60px;
 $cell-height: 60px;
 $whitish: rgba(#eee, 0.6);
+$disabled: rgba(#ccc, 0.7);
 
 :host {
     display: block;
@@ -68,5 +69,9 @@ $whitish: rgba(#eee, 0.6);
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
         padding: 3px 5px;
         border-radius: 5px;
+    }
+
+    .disabled {
+        background-color: $disabled;
     }
 }
