--- a/src/app/components/day-schedule/day-schedule.component.html
+++ b/src/app/components/day-schedule/day-schedule.component.html
@@ -1,3 +1,3 @@
-<p>
-  day-schedule works!
-</p>
+<input type="hidden" [matDatepicker]="picker" placeholder="Choose a date">
+<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+<mat-datepicker #picker [touchUi]="true" [opened]="true"></mat-datepicker>
