--- a/src/app/components/day-schedule/day-schedule.component.html
+++ b/src/app/components/day-schedule/day-schedule.component.html
@@ -1,3 +1,10 @@
-<input type="hidden" [matDatepicker]="picker" placeholder="Choose a date">
+<input [(ngModel)]="selectedDate" type="hidden" [matDatepicker]="picker" placeholder="Choose a date">
 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 <mat-datepicker #picker [touchUi]="true" [opened]="true"></mat-datepicker>
+
+{{ selectedDate | date }}
+
+<mat-list *ngIf="selectedDate">
+  <mat-list-item>Item 1</mat-list-item>
+  <mat-divider></mat-divider>
+</mat-list>
