--- a/src/app/components/week-schedule/week-schedule.component.scss
+++ b/src/app/components/week-schedule/week-schedule.component.scss
@@ -75,3 +75,8 @@ $disabled: rgba(#ccc, 0.7);
         background-color: $disabled;
     }
 }
+
+mat-chip-list, 
+mat-chip {
+    pointer-events: none;
+}
