--- a/src/app/components/week-schedule/week-schedule.component.scss
+++ b/src/app/components/week-schedule/week-schedule.component.scss
@@ -9,6 +9,15 @@ $whitish: rgba(#eee, 0.6);
     padding: 25px;
 }
 
+.calendar-nav {
+    h2 {
+        font-size: 30px;
+        font-weight: 300;
+        margin: 0;
+        margin-right: 1em;
+    }
+}
+
 .calendar {
     display: flex;
     width: 100%;
@@ -72,7 +81,3 @@ $whitish: rgba(#eee, 0.6);
     }
 }
 
-mat-chip-list, 
-mat-chip {
-    pointer-events: none;
-}
