--- a/src/app/components/week-schedule/week-schedule.component.scss
+++ b/src/app/components/week-schedule/week-schedule.component.scss
@@ -7,6 +7,9 @@ $whitish: rgba(#eee, 0.6);
 :host {
     display: block;
     padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .calendar-nav {
@@ -21,6 +24,7 @@ $whitish: rgba(#eee, 0.6);
 .calendar {
     display: flex;
     width: 100%;
+    max-width: 1000px;
     border: 1px solid $border-color;
 
     .hour-segments {
