[Bugfix] disabled/truck interaction on modal

--- a/src/app/components/record-dialog/record-dialog.component.html
+++ b/src/app/components/record-dialog/record-dialog.component.html
@@ -2,7 +2,9 @@
   <ul formArrayName="trucks" [hidden]="disabled.value">
       <li *ngFor="let rec of trucks.controls; let i=index" [formGroupName]="i"
         class="record-form-item">
-          <input type="text" [disabled]="disabled.value" formControlName="number" />
+          <input type="text" 
+            [disabled]="disabled.value" formControlName="number"
+            placeholder="truck number" />
 
           <button (click)="removeTruck(i)"
             type="button" mat-raised-button
